hydroflow/tests/snapshots/surface_context__context_current_tick_start_does_not_count_time_between_ticks_async@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_context.rs
expression: df.meta_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <code>source_iter([()])</code>"/]:::pullClass
    2v1[\"(2v1) <code>persist()</code>"/]:::pullClass
    3v1[/"(3v1) <code>for_each(|_| time.set(Some(Instant::now() - context.current_tick_start())))</code>"\]:::pushClass
    1v1--->2v1
    2v1--->3v1
end

